# ufeel-testing-room

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  Directory.Build.props  LICENSE  README.md
.github/workflows/: mirror.yml
Assets/: DoorAnimatorController.controller  DoorTrigger.cs  SceneLoader.cs  UFeel.asmref
Assets/Doors/Materials/: Copper.mat  Door_2_White.mat
Assets/Doors/Prefab/: Door_Container.prefab
Assets/Doors/Script/: Door.cs
Assets/DoorsPackage/Script/: CameraOpenDoor.cs  Door.cs
Assets/Editor/: CarouselBuilder.cs
Assets/Materials/TestingRoom/: LightFixture_Material.mat
Assets/Prefabs/: DoorHolder.prefab  DoorHolder_01.prefab
Assets/Scenes/: Biometrics.unity  DemoGame.unity  EmotionDetection.unity  EyeTracking.unity  EyeTrackingSetup.unity  SampleScene.unity  TestingRoom.unity  TestingRoom_EmotionDetection.unity  TestingRoom_EyeTracking.unity  TestingRoom_Heartbeat.unity  TestingRoom_SpeechRecognition.unity
Assets/Scenes/API/: APITesting.unity
Assets/Scenes/Emotions/: Animals.unity  Environment.unity  Maze.unity
Assets/Scenes/EyeTracking/: Runner.unity  Survivor.unity
Assets/Scenes/HeartRateSensor/: HorrorRoom.unity  RhythmGame.unity
Assets/Scenes/SpeechToText/: EscapeRoom.unity  UnlockWorld.unity
Assets/Scripts/: DoorController.cs  Game.asmdef  GameManager.cs  LauncherScript.cs
Assets/Settings/: URP.asset  URP_DATA.asset  UniversalRenderPipelineGlobalSettings.asset
Assets/Terrain/: Terrain_0_0_6b264fa7-d165-4834-aaa0-497bc188e5d2.asset
Assets/TestingRoom/: TestingRoom.asmdef
Documentation/: Architecture.md  Installation.md  README.md  Standards.md
Documentation/TestingRoom/: README.md  Scenes.md  SetupInstructions.md  TestingTips.md
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  TagManager.asset
PythonServer/: client_base.py  data_processor.py  emotion_detector.py  eye_tracker.py  heart_rate_sensor.py  main.py  mic_processor.py  requirements.txt  speech_to_text.py  video_processor.py
PythonServers/: convert_models.py  debug.py  dummy_biometrics.py  emotion_detector_human.py  eye_tracker.py  eye_tracker_2.py  eye_tracker_values.json  main.py  mic_processor.py  requirements.txt  runModel.py  speech_recognition_test.py  speech_to_text.py  speech_to_text_ccp_version.cpp  video_processor.py
PythonServers/EmotionDetection/: emotion_detection.py  eval_livecam.py  requirements.txt
PythonServers/EyeTracking/: eye_tracking.py
PythonServers/models/: simple_CNN_converted_tf.h5
ResearchAi/: README.md
Script/: .gitignore  API.md  FakeUnityEngine.cs  Main.cs  NOTICE.MD  UFeel.asmdef  UfeelAPI.cs  clean_script.py
Script/EmotionDetection/: EmotionReceiver.cs
Script/EyeTracking/: EyeTrackingReceiver.cs
Script/PythonServers/: client_base.py  emotion_detector.py  eye_tracker.py  eye_tracker_values.json  main.py  video_processor.py
Script/Server/: ClientBase.cs  PythonServerController.cs  UDPReceiverBase.cs
tools/: refresh-package
transition-tests-py-cpp/TO_PUT_IN_TESTING_ROOM/: image_processor.py
transition-tests-py-cpp/cpp/: CMakeLists.txt  build.sh
transition-tests-py-cpp/cpp/include/: EmotionDetector.hpp
transition-tests-py-cpp/cpp/src/: EmotionDetector.cpp  EmotionPlugin.cpp  main.cpp
transition-tests-py-cpp/python/: gimefive_to_onnx.py  verify_onnx.py
(+101 files in other folders)
